--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@ body {
   font-size: 16pt;
 }
 
+.footer {
+  position:absolute;
+   bottom:0;
+   width:100%;
+   height:30px;   /* Height of the footer */
+}
+
 #lesson-box:focus {
     outline:none;
     border-color:#9ecaed;
